syntax = "proto3";

package pb;
option go_package = "pb";

// ignore this error - protoc knows how to import a .proto file from the same folder as this proto file
import "message.proto";

// example protocol
message FindNodeReq {
    Metadata metadata = 1;
    string ping = 2; // the echo message itself - protocol specific - starts at #2
}

message FindNodeResp {
    Metadata metadata = 1;
    string pong = 2; // the echo message itself - protocol specific - starts at #2
}
